out/networkpolicy-dev.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: python-app-egress
  namespace: python-app-dev
  annotations:
    egress.policy/rules: 'api.github.com [172.182.252.137], raw.githubusercontent.com
      [185.199.108.133, 185.199.109.133, 185.199.110.133, 185.199.111.133], gist.githubusercontent.com
      [185.199.108.133, 185.199.109.133, 185.199.110.133, 185.199.111.133]:443 - GitHub
      APIs

      internal-api-dev.corp.local:80 - Internal REST API - DEV

      *.monitoring.internal:443 - All monitoring subdomains (Grafana, Prometheus,
      etc)

      redis-dev-1.internal, redis-dev-2.internal, 10.50.100.10:30000-30999 - Redis
      cluster - DEV

      postgres-dev.db.internal:5432 - PostgreSQL - DEV (direct access allowed)

      prometheus.monitoring.internal:9090 - Prometheus metrics endpoint

      jaeger-collector.tracing.internal:14250 - Jaeger tracing collector

      dagster-code-server.dagster.svc.cluster.local:4266 - Dagster code server gRPC
      - DEV/STG

      jaeger-collector.tracing.internal:14250 - Jaeger tracing collector gRPC'
spec:
  selector: app == "python-app"
  types:
  - Egress
  egress:
  # DNS (CoreDNS)
  - action: Allow
    protocol: UDP
    destination:
      ports:
      - 53
  # DNS (CoreDNS)
  - action: Allow
    protocol: TCP
    destination:
      ports:
      - 53
  # Redis cluster - DEV
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 10.50.100.10/32
      ports:
      - 30000:30999
  # GitHub APIs
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 172.182.252.137/32
      - 185.199.108.133/32
      - 185.199.109.133/32
      - 185.199.110.133/32
      - 185.199.111.133/32
      ports:
      - 443
  # default deny
  - action: Deny
