out/networkpolicy-prd.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: python-app-egress
  namespace: python-app-prd
  annotations:
    egress.policy/rules: 'api.github.com [140.82.116.6], raw.githubusercontent.com
      [185.199.108.133, 185.199.109.133, 185.199.110.133, 185.199.111.133], gist.githubusercontent.com
      [185.199.108.133, 185.199.109.133, 185.199.110.133, 185.199.111.133]:443 - GitHub
      APIs

      internal-api.corp.local, internal-api-legacy.corp.local, api.corp.local:80 -
      Internal REST API - PRD (multiple endpoints)

      partner-api.external.com [54.237.57.21]:443 - Partner API - Production

      *.monitoring.internal:443 - All monitoring subdomains (Grafana, Prometheus,
      etc)

      redis-prd-master.internal, redis-prd-replica-1.internal, redis-prd-replica-2.internal,
      10.50.250.25, 10.50.250.26, 10.50.250.27:30000-30999 - Redis cluster - PRD (HA)

      kafka-prd-1.internal.corp, kafka-prd-2.internal.corp, kafka-prd-3.internal.corp:9093
      - Kafka cluster - PRD

      prometheus.monitoring.internal:9090 - Prometheus metrics endpoint

      jaeger-collector.tracing.internal:14250 - Jaeger tracing collector

      10.20.30.0/24:9092 - Kafka brokers subnet - PRD

      172.16.20.5:5432 - PostgreSQL database - PRD

      dagster-code-server-1.dagster.svc.cluster.local, dagster-code-server-2.dagster.svc.cluster.local:4266
      - Dagster code servers gRPC - PRD

      jaeger-collector.tracing.internal:14250 - Jaeger tracing collector gRPC

      payment-gateway.partner.com [0.0.0.0]:8443 - Payment gateway mTLS

      secure-api.partner.com [0.0.0.0]:50051 - Secure partner API gRPC mTLS'
spec:
  selector: app == "python-app"
  types:
  - Egress
  egress:
  # DNS (CoreDNS)
  - action: Allow
    protocol: UDP
    destination:
      ports:
      - 53
  # DNS (CoreDNS)
  - action: Allow
    protocol: TCP
    destination:
      ports:
      - 53
  # Secure partner API gRPC mTLS
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 0.0.0.0/32
      ports:
      - 50051
  # Payment gateway mTLS
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 0.0.0.0/32
      ports:
      - 8443
  # Kafka brokers subnet - PRD
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 10.20.30.0/24
      ports:
      - 9092
  # Redis cluster - PRD (HA)
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 10.50.250.25/32
      - 10.50.250.26/32
      - 10.50.250.27/32
      ports:
      - 30000:30999
  # GitHub APIs
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 140.82.116.6/32
      - 185.199.108.133/32
      - 185.199.109.133/32
      - 185.199.110.133/32
      - 185.199.111.133/32
      ports:
      - 443
  # PostgreSQL database - PRD
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 172.16.20.5/32
      ports:
      - 5432
  # Partner API - Production
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 54.237.57.21/32
      ports:
      - 443
  # default deny
  - action: Deny
