out/networkpolicy-stg.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: python-app-egress
  namespace: python-app-stg
  annotations:
    egress.policy/rules: 'api.github.com [172.182.252.137], raw.githubusercontent.com
      [185.199.108.133, 185.199.109.133, 185.199.110.133, 185.199.111.133], gist.githubusercontent.com
      [185.199.108.133, 185.199.109.133, 185.199.110.133, 185.199.111.133]:443 - GitHub
      APIs

      internal-api-stg.corp.local:80 - Internal REST API - STG

      partner-api-staging.external.com [54.237.57.21]:443 - Partner API - Staging

      *.monitoring.internal:443 - All monitoring subdomains (Grafana, Prometheus,
      etc)

      redis-stg-1.internal, redis-stg-2.internal, 10.50.200.10:30000-30999 - Redis
      cluster - STG

      kafka-stg.internal.corp:9093 - Kafka cluster - STG

      prometheus.monitoring.internal:9090 - Prometheus metrics endpoint

      jaeger-collector.tracing.internal:14250 - Jaeger tracing collector

      172.16.10.5:5432 - PostgreSQL database - STG

      dagster-code-server.dagster.svc.cluster.local:4266 - Dagster code server gRPC
      - DEV/STG

      jaeger-collector.tracing.internal:14250 - Jaeger tracing collector gRPC

      payment-gateway.partner.com [0.0.0.0]:8443 - Payment gateway mTLS'
spec:
  selector: app == "python-app"
  types:
  - Egress
  egress:
  # DNS (CoreDNS)
  - action: Allow
    protocol: UDP
    destination:
      ports:
      - 53
  # DNS (CoreDNS)
  - action: Allow
    protocol: TCP
    destination:
      ports:
      - 53
  # Payment gateway mTLS
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 0.0.0.0/32
      ports:
      - 8443
  # Redis cluster - STG
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 10.50.200.10/32
      ports:
      - 30000:30999
  # PostgreSQL database - STG
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 172.16.10.5/32
      ports:
      - 5432
  # GitHub APIs
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 172.182.252.137/32
      - 185.199.108.133/32
      - 185.199.109.133/32
      - 185.199.110.133/32
      - 185.199.111.133/32
      ports:
      - 443
  # Partner API - Staging
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 54.237.57.21/32
      ports:
      - 443
  # default deny
  - action: Deny
